--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ weaviate-client = "^4.5.4"
 langchain = "^0.1.12"
 langchain-experimental = "^0.0.55"
 langchain-openai = "^0.0.8"
+coverage = "^7.4.4"
 
 
 [build-system]
