--- a/docker/weaviate/docker-compose.yml
+++ b/docker/weaviate/docker-compose.yml
@@ -10,9 +10,11 @@ services:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
-      DEFAULT_VECTORIZER_MODULE: 'none'
-      ENABLE_MODULES: 'text2vec-gpt4all'
-      GPT4ALL_INFERENCE_API: 'http://text2vec-gpt4all:8080'
+      ENABLE_MODULES: text2vec-transformers
+      DEFAULT_VECTORIZER_MODULE: text2vec-transformers
+      TRANSFORMERS_INFERENCE_API: http://t2v-transformers:8080
       CLUSTER_HOSTNAME: 'node1'
-  text2vec-gpt4all:
-    image: cr.weaviate.io/semitechnologies/gpt4all-inference:all-MiniLM-L6-v2
+  t2v-transformers:  # Set the name of the inference container
+    image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
+    environment:
+      ENABLE_CUDA: 0 
