--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-__pycache__*
-library/__pycache__*
-api/__pycache__*
-tests/__pycache__*
+/*/__pycache__/*
+/tests/library/__pycache__/*
+/**/__pycache__ /*
