Data flows through Kafka (#4)
* making email fetchable in batches

* extended email model and test for extractor

* makefile merge conflict

* Adding a more complex email model with cross-references for search

* Better gitignore

* Better gitignore with gmail creds removed

* coveragee file just makes things more painful, removing it

* Reinstating a lost change to logic

* Removing some prints

* Adding parameter to specify a limit to context

* Fixing the prompt and adding some prints for clarity

* Fixing print

* Trying some other modeels for improved results

* Changing model used, extending tokens generated, and adding some logging

* Adding Kafka support and email processing downstream from API

---------

Co-authored-by: Keith Nordstrom <keith@timeli.io>

--- a/processor/pyproject.toml
+++ b/processor/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Keith Nordstrom <keith@timeli.io>"]
 readme = "README.rst"
-packages = [{include = "api"}, {include = "library"}, {include = "processor"}]
+packages = [{include = "library"}, {include = "processor"}]
 
 [tool.poetry.scripts]
 processor = "processor.main:start"
@@ -13,7 +13,6 @@ processor = "processor.main:start"
 python = "^3.11"
 pytest = "^8.1.1"
 Flask = "^3.0.2"
-gpt4all = "^2.4.0"
 google-api-python-client = "^2.122.0"
 google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.0"
@@ -26,8 +25,6 @@ email-reply-parser = "^0.5.12"
 coverage = "^7.4.4"
 kafka-python = "^2.0.2"
 python-dotenv = "^1.0.1"
-
-
 
 
 [build-system]
