--- a/processor/pyproject.toml
+++ b/processor/pyproject.toml
@@ -25,7 +25,13 @@ email-reply-parser = "^0.5.12"
 coverage = "^7.4.4"
 kafka-python = "^2.0.2"
 python-dotenv = "^1.0.1"
+ics = "^0.7.2"
 
+
+
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
