--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ coverage = "^7.4.4"
 kafka-python = "^2.0.2"
 python-dotenv = "^1.0.1"
 ics = "^0.7.2"
+neo4j = "^5.20.0"
+langchain-community = "^0.0.36"
 
 
 
