--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,10 @@ python-dotenv = "^1.0.1"
 ics = "^0.7.2"
 neo4j = "^5.20.0"
 langchain-community = "^0.0.36"
-
-
+matplotlib = "^3.8.4"
+numpy = "^1.26.4"
+groq = "^0.5.0"
+langchain-groq = "^0.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
