--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,9 +31,11 @@ services:
       - NEO4J_AUTH=neo4j/password
     volumes:
       - /var/lib/neo4j/data:/data
-      - /var/lib/neo4j/conf:/conf
-      - /var/lib/neo4j/logs:/logs
-      - /var/lib/neo4j/plugins:/plugins
+    environment:
+      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_apoc_export_file_enabled=true 
+      - NEO4J_apoc_import_file_enabled=true 
+      - NEO4J_apoc_import_file_use__neo4j__config=true 
   zoo1:
     platform: linux/x86_64
     image: confluentinc/cp-zookeeper:7.3.2
