--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ weaviate-client = "^4.5.4"
 langchain = "^0.1.12"
 langchain-experimental = "^0.0.55"
 langchain-openai = "^0.0.8"
-beautifulsoup4 = "^4.12.3"
+beautifulsoup4 = "^4.8.2"
 email-reply-parser = "^0.5.12"
 coverage = "^7.4.4"
 kafka-python = "^2.0.2"
@@ -33,6 +33,10 @@ matplotlib = "^3.8.4"
 numpy = "^1.26.4"
 groq = "^0.5.0"
 langchain-groq = "^0.1.3"
+python-docx = "^1.1.2"
+pypdf = "^4.2.0"
+textextract = "^1.2.0"
+textract = "^1.6.5"
 
 
 [tool.poetry.group.dev.dependencies]
