--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ processor = "processor.main:start"
 python = "^3.11"
 pytest = "^8.1.1"
 Flask = "^3.0.2"
-gpt4all = "^2.4.0"
 google-api-python-client = "^2.122.0"
 google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.0"
@@ -21,7 +20,7 @@ weaviate-client = "^4.5.4"
 langchain = "^0.1.12"
 langchain-experimental = "^0.0.55"
 langchain-openai = "^0.0.8"
-beautifulsoup4 = "^4.12.3"
+beautifulsoup4 = "^4.8.2"
 email-reply-parser = "^0.5.12"
 coverage = "^7.4.4"
 kafka-python = "^2.0.2"
@@ -33,6 +32,10 @@ matplotlib = "^3.8.4"
 numpy = "^1.26.4"
 groq = "^0.5.0"
 langchain-groq = "^0.1.3"
+python-docx = "^1.1.2"
+pypdf = "^4.2.0"
+textextract = "^1.2.0"
+textract = "^1.6.5"
 
 
 [tool.poetry.group.dev.dependencies]
