Feature/calendar to kg using kafka (#12)
* changes made for calendar api to kg

* deleted calendar entries

* Feature/86b09hx47 api for schedule (#10)

* making email fetchable in batches

* extended email model and test for extractor

* makefile merge conflict

* Adding a more complex email model with cross-references for search

* Better gitignore

* Better gitignore with gmail creds removed

* coveragee file just makes things more painful, removing it

* Reinstating a lost change to logic

* Removing some prints

* Adding parameter to specify a limit to context

* Fixing the prompt and adding some prints for clarity

* Fixing print

* Trying some other modeels for improved results

* Changing model used, extending tokens generated, and adding some logging

* Adding Kafka support and email processing downstream from API

* Notebook reads all emails from kafka

* A notebook for exploring the creation of cypher by extracting from text

* Updating to provide a source of truth to compare to

* Updating notebook, was incorreect

* Updating a notebook and some utils to explore KG creation

* Removing warnings

* Adding support for attachments and reading ics files

* Updating processor to receive events and store to weaviate

* Better gitignore

* Clearing some cache from gitignore issues'

* Dealing with missing description

* Changes for neo4j informed RAG, some refactors

* APOC plugin is required on o4j

* Some changes to generalize the LLM implementation through the API and set temp to 0 globally

* fixing a source of error in parsing bad attachment data

* Poetry changes for new functionality

* Switched to using groq

* removing a key

---------

Co-authored-by: Keith Nordstrom <keith@timeli.io>

* added logic to add calendar events to neo4j to create a kg

* removed the google key and commented out some libraries

* removed print statements and customizations for mac

* removed poe

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -71,8 +71,17 @@ services:
   processor:
     image: context-processor:0.1.1
     environment:
-      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_BROKER: "host.docker.internal:29092"
       KAFKA_TOPIC: "emails"
       PYTHONUNBUFFERED: 1
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
+
+  event_processor:
+    image: event-processor:0.1.1
+    environment:
+      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_TOPIC: "calendar"
+      PYTHONUNBUFFERED: 1
+      NEO4J_DB_HOST: "docker-neo4j-1"
+      NEO4J_DB_PORT: 7687
