--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -85,7 +85,9 @@ services:
       PYTHONUNBUFFERED: 1
       NEO4J_DB_HOST: "docker-neo4j-1"
       NEO4J_DB_PORT: 7687
-
+      NEO4J_USERNAME: "${NEO4J_USERNAME}"
+      NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
+      
   # api:
   #   image: context-api:0.1.1
   #   ports:
