--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -87,6 +87,13 @@ services:
       NEO4J_DB_PORT: 7687
       NEO4J_USERNAME: "${NEO4J_USERNAME}"
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
+
+  document_processor:
+    image: document-processor:0.1.1
+    environment:
+      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_TOPIC: "documents"
+      PYTHONUNBUFFERED: 1
       
   # api:
   #   image: context-api:0.1.1
