--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -25,19 +25,23 @@ services:
     image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
     environment:
       ENABLE_CUDA: 0 
-  # neo4j:
-  #   image: neo4j:4.3.1
-  #   ports:
-  #   - 7687:7687
-  #   - 7474:7474
-  #   restart: on-failure:0
-  #   volumes:
-  #     - /var/lib/neo4j/data:/data
-  #   environment:
-  #     - NEO4JLABS_PLUGINS=["apoc"]
-  #     - NEO4J_apoc_export_file_enabled=true 
-  #     - NEO4J_apoc_import_file_enabled=true 
-  #     - NEO4J_apoc_import_file_use__neo4j__config=true 
+  neo4j:
+    image: neo4j:4.3.1
+    ports:
+    - 7688:7688
+    - 7575:7575
+    restart: on-failure:0
+    # volumes:
+    #   - /var/lib/neo4j/data:/data
+    environment:
+      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_apoc_export_file_enabled=true 
+      - NEO4J_apoc_import_file_enabled=true 
+      - NEO4J_apoc_import_file_use__neo4j__config=true 
+      - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7575
+      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:7688
+      - NEO4J_AUTH=neo4j/password
+
   # zoo1:
   #   image: confluentinc/cp-zookeeper:7.3.2
   #   hostname: zoo1
