--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -95,6 +95,8 @@ services:
       KAFKA_TOPIC: "documents"
       PYTHONUNBUFFERED: 1
       GROQ_API_KEY: "${GROQ_API_KEY}"
+      VECTOR_DB_HOST: "docker-weaviate-1"
+      VECTOR_DB_PORT: 8080
       
   # api:
   #   image: context-api:0.1.1
