--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -76,6 +76,10 @@ services:
       PYTHONUNBUFFERED: 1
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
+      NEO4J_DB_HOST: "docker-neo4j-1"
+      NEO4J_DB_PORT: 7687
+      NEO4J_USERNAME: "${NEO4J_USERNAME}"
+      NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
 
   event_processor:
     image: event-processor:0.1.1
