--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "library"}, {include = "processor"}]
 processor = "processor.main:start"
 event_processor = "processor.main:start_kafka_calendar"
 document_processor = "processor.main:start_kafka_documents"
+employee_processor = "employees.main:start"
 
 [tool.poetry.dependencies]
 python = "^3.11"
