--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ slack-sdk = "^3.27.2"
 pytest-docker = "^3.1.1"
 icalendar = "^5.0.12"
 recurring-ical-events = "^2.2.1"
+fastapi = "^0.111.0"
 
 
 [tool.poetry.group.dev.dependencies]
