--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ employee_processor = "employees.main:start"
 [tool.poetry.dependencies]
 python = "^3.11"
 pytest = "^8.1.1"
-Flask = "^3.0.2"
 google-api-python-client = "^2.122.0"
 google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.0"
@@ -44,6 +43,7 @@ pytest-docker = "^3.1.1"
 icalendar = "^5.0.12"
 recurring-ical-events = "^2.2.1"
 fastapi = "^0.111.0"
+uvicorn = "^0.30.3"
 
 
 [tool.poetry.group.dev.dependencies]
