Simplifying the way email threads are summarized, adding a test

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     - 7687:7687
     - 7474:7474
     restart: on-failure:0
-    volumes:
-      - /var/lib/neo4j/data:/data
+    # volumes:
+    #   - /var/lib/neo4j/data:/data
     environment:
       - NEO4JLABS_PLUGINS=["apoc"]
       - NEO4J_apoc_export_file_enabled=true 
