Fixing some issues with the data processing and adding dates to the entries, which will be required for adding importance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ processor = "processor.main:start"
 event_processor = "processor.main:start_kafka_calendar"
 document_processor = "processor.main:start_kafka_documents"
 employee_processor = "employees.main:start"
+slack_processor = "slack.main:start"
 
 [tool.poetry.dependencies]
 python = "^3.11"
