--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -102,19 +102,20 @@ services:
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
       
-  # api:
-  #   image: context-api:0.1.1
-  #   ports:
-  #     - "5010:5010"
-  #     - "3127:3127"
-  #   environment:
-  #     KAFKA_BROKER: "kafka1:29092"
-  #     KAFKA_TOPIC: "emails"
-  #     PYTHONUNBUFFERED: 1
-  #     VECTOR_DB_HOST: "docker-weaviate-1"
-  #     VECTOR_DB_PORT: 8080
-  #     NEO4J_URI: "docker-neo4j-1:7474"
-  #     NEO4J_USERNAME: "${NEO4J_USERNAME}"
-  #     NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
-  #     GROQ_API_KEY: "${GROQ_API_KEY}"
-  #     GMAIL_CREDS: "${GMAIL_CREDS}"
+  api:
+    image: context-api:0.1.1
+    ports:
+      - "5010:5010"
+      - "3127:3127"
+    environment:
+      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_TOPIC: "emails"
+      PYTHONUNBUFFERED: 1
+      VECTOR_DB_HOST: "docker-weaviate-1"
+      VECTOR_DB_PORT: 8080
+      NEO4J_DB_HOST: "docker-neo4j-1"
+      NEO4J_URI: "docker-neo4j-1:7474"
+      NEO4J_USERNAME: "${NEO4J_USERNAME}"
+      NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
+      GROQ_API_KEY: "${GROQ_API_KEY}"
+      GSUITE_CREDS_FILE: "${GSUITE_CREDS_FILE}"
