--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
-      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate-test'
       ENABLE_MODULES: text2vec-transformers
       DEFAULT_VECTORIZER_MODULE: text2vec-transformers
       TRANSFORMERS_INFERENCE_API: http://t2v-transformers:8080
