--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ packages = [{include = "library"}, {include = "processor"}]
 processor = "processor.main:start"
 event_processor = "processor.main:start_kafka_calendar"
 document_processor = "processor.main:start_kafka_documents"
-employee_processor = "employees.main:start"
-slack_processor = "slack.main:start"
+employee_processor = "processor.employees.main:start"
+slack_processor = "processor.slack:start"
+transcripts_processor = "processor.transcripts:start"
 
 [tool.poetry.dependencies]
 python = "^3.11"
