--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,10 +10,16 @@ services:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
-      ENABLE_MODULES: text2vec-transformers
+      ENABLE_MODULES: text2vec-transformers,reranker-transformers
       DEFAULT_VECTORIZER_MODULE: text2vec-transformers
       TRANSFORMERS_INFERENCE_API: http://t2v-transformers:8080
+      RERANKER_INFERENCE_API: http://reranker-transformers:8080
       CLUSTER_HOSTNAME: 'weaviate-1'
+  reranker-transformers:
+    platform: linux/x86_64
+    image: cr.weaviate.io/semitechnologies/reranker-transformers:cross-encoder-ms-marco-MiniLM-L-6-v2
+    environment:
+      ENABLE_CUDA: '0'
   t2v-transformers:  # Set the name of the inference container
     image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
     environment:
