--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -107,6 +107,16 @@ services:
       GROQ_API_KEY: "${GROQ_API_KEY}"
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
+  
+  transcript_processor:
+    image: transcript-processor:0.1.1
+    environment:
+      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_TOPIC: "transcripts"
+      PYTHONUNBUFFERED: 1
+      GROQ_API_KEY: "${GROQ_API_KEY}"
+      VECTOR_DB_HOST: "docker-weaviate-1"
+      VECTOR_DB_PORT: 8080
       
   api:
     image: context-api:0.1.1
