--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.4'
 services:
   weaviate:
     image: cr.weaviate.io/semitechnologies/weaviate:1.24.4
     ports:
     - 8080:8080
     - 50051:50051
-    restart: on-failure:0
+  #  restart: on-failure:5
     environment:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
@@ -29,7 +28,7 @@ services:
     ports:
     - 7687:7687
     - 7474:7474
-    restart: on-failure:0
+ #   restart: on-failure:5
     # volumes:
     #   - /var/lib/neo4j/data:/data
     environment:
@@ -75,7 +74,7 @@ services:
       - zoo1
 
   processor:
-    image: context-processor:0.1.1
+    image: knordstrom/email-processor:0.1.1
     environment:
       KAFKA_BROKER: "host.docker.internal:29092"
       KAFKA_TOPIC: "emails"
@@ -88,7 +87,7 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
 
   event_processor:
-    image: event-processor:0.1.1
+    image: knordstrom/event-processor:0.1.1
     environment:
       KAFKA_BROKER: "kafka1:29092"
       KAFKA_TOPIC: "calendar"
@@ -99,7 +98,7 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
 
   document_processor:
-    image: document-processor:0.1.1
+    image: knordstrom/document-processor:0.1.1
     environment:
       KAFKA_BROKER: "kafka1:29092"
       KAFKA_TOPIC: "documents"
@@ -109,7 +108,7 @@ services:
       VECTOR_DB_PORT: 8080
   
   transcript_processor:
-    image: transcript-processor:0.1.1
+    image: knordstrom/transcript-processor:0.1.1
     environment:
       KAFKA_BROKER: "kafka1:29092"
       KAFKA_TOPIC: "transcripts"
@@ -119,7 +118,7 @@ services:
       VECTOR_DB_PORT: 8080
       
   api:
-    image: context-api:0.1.1
+    image: knordstrom/sofia-api:0.1.1
     ports:
       - "5010:5010"
       - "3127:3127"
@@ -135,3 +134,14 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
       GROQ_API_KEY: "${GROQ_API_KEY}"
       GSUITE_CREDS_FILE: "${GSUITE_CREDS_FILE}"
+
+  nginx:
+    restart: always
+    image: nginx:1-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx:/var/log/nginx
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
