--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       - zoo1
 
   processor:
-    image: knordstrom/email-processor:0.1.1
+    image: context-processor:0.1.1
     environment:
       KAFKA_BROKER: "host.docker.internal:29092"
       KAFKA_TOPIC: "emails"
@@ -87,7 +87,7 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
 
   event_processor:
-    image: knordstrom/event-processor:0.1.1
+    image: event-processor:0.1.1
     environment:
       KAFKA_BROKER: "kafka1:29092"
       KAFKA_TOPIC: "calendar"
@@ -98,7 +98,7 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
 
   document_processor:
-    image: knordstrom/document-processor:0.1.1
+    image: document-processor:0.1.1
     environment:
       KAFKA_BROKER: "kafka1:29092"
       KAFKA_TOPIC: "documents"
@@ -108,7 +108,7 @@ services:
       VECTOR_DB_PORT: 8080
   
   transcript_processor:
-    image: knordstrom/transcript-processor:0.1.1
+    image: transcript-processor:0.1.1
     environment:
       KAFKA_BROKER: "kafka1:29092"
       KAFKA_TOPIC: "transcripts"
@@ -118,7 +118,7 @@ services:
       VECTOR_DB_PORT: 8080
       
   api:
-    image: knordstrom/sofia-api:0.1.1
+    image: context-api:0.1.1
     ports:
       - "5010:5010"
       - "3127:3127"
@@ -134,14 +134,3 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
       GROQ_API_KEY: "${GROQ_API_KEY}"
       GSUITE_CREDS_FILE: "${GSUITE_CREDS_FILE}"
-
-  nginx:
-    restart: always
-    image: nginx:1-alpine
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx:/var/log/nginx
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - api
