--- a/docker/docker-compose-gcp.yml
+++ b/docker/docker-compose-gcp.yml
@@ -1,10 +1,11 @@
+version: '3.4'
 services:
   weaviate:
     image: cr.weaviate.io/semitechnologies/weaviate:1.24.4
     ports:
     - 8080:8080
     - 50051:50051
-  #  restart: on-failure:5
+    restart: on-failure:0
     environment:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
@@ -16,11 +17,13 @@ services:
       CLUSTER_HOSTNAME: 'weaviate-1'
   reranker-transformers:
     platform: linux/x86_64
+    restart: on-failure:0
     image: cr.weaviate.io/semitechnologies/reranker-transformers:cross-encoder-ms-marco-MiniLM-L-6-v2
     environment:
       ENABLE_CUDA: '0'
   t2v-transformers:  # Set the name of the inference container
     image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
+    restart: on-failure:0
     environment:
       ENABLE_CUDA: 0 
   neo4j:
@@ -28,11 +31,12 @@ services:
     ports:
     - 7687:7687
     - 7474:7474
- #   restart: on-failure:5
+    restart: on-failure:0
     # volumes:
     #   - /var/lib/neo4j/data:/data
     environment:
-      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_PLUGINS=["apoc"]
+      - NEO4J_AUTH=${NEO4J_USERNAME}/${NEO4J_PASSWORD}
       - NEO4J_apoc_export_file_enabled=true 
       - NEO4J_apoc_import_file_enabled=true 
       - NEO4J_apoc_import_file_use__neo4j__config=true 
@@ -40,6 +44,7 @@ services:
     image: confluentinc/cp-zookeeper:7.3.2
     hostname: zoo1
     container_name: zoo1
+    restart: on-failure:0
     ports:
       - "2181:2181"
     environment:
@@ -48,9 +53,10 @@ services:
       ZOOKEEPER_SERVERS: zoo1:2888:3888
 
   kafka1:
-    image: confluentinc/cp-kafka:7.3.2
+    image: confluentinc/cp-kafka:7.4.6
     hostname: kafka1
     container_name: kafka1
+    restart: on-failure:0
     ports:
       - "9092:9092"
       - "29092:29092"
@@ -74,9 +80,10 @@ services:
       - zoo1
 
   processor:
-    image: context-processor:0.1.1
+    image: knordstrom/email-processor:0.1.10
+    restart: always
     environment:
-      KAFKA_BROKER: "host.docker.internal:29092"
+      KAFKA_BROKER: "kafka1:19092"
       KAFKA_TOPIC: "emails"
       PYTHONUNBUFFERED: 1
       VECTOR_DB_HOST: "docker-weaviate-1"
@@ -85,55 +92,65 @@ services:
       NEO4J_DB_PORT: 7687
       NEO4J_USERNAME: "${NEO4J_USERNAME}"
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
+      PROMPTTEAMS_API_KEY: "${PROMPTTEAMS_API_KEY}"
 
   event_processor:
-    image: event-processor:0.1.1
+    image: knordstrom/event-processor:0.1.10
+    restart: always
     environment:
-      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_BROKER: "kafka1:19092"
       KAFKA_TOPIC: "calendar"
       PYTHONUNBUFFERED: 1
       NEO4J_DB_HOST: "docker-neo4j-1"
       NEO4J_DB_PORT: 7687
       NEO4J_USERNAME: "${NEO4J_USERNAME}"
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
+      PROMPTTEAMS_API_KEY: "${PROMPTTEAMS_API_KEY}"
 
   document_processor:
-    image: document-processor:0.1.1
+    image: knordstrom/document-processor:0.1.10
+    restart: always
     environment:
-      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_BROKER: "kafka1:19092"
       KAFKA_TOPIC: "documents"
       PYTHONUNBUFFERED: 1
       GROQ_API_KEY: "${GROQ_API_KEY}"
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
+      PROMPTTEAMS_API_KEY: "${PROMPTTEAMS_API_KEY}"
   
   transcript_processor:
-    image: transcript-processor:0.1.1
+    image: knordstrom/transcript-processor:0.1.10
+    restart: always
     environment:
-      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_BROKER: "kafka1:19092"
       KAFKA_TOPIC: "transcripts"
       PYTHONUNBUFFERED: 1
       GROQ_API_KEY: "${GROQ_API_KEY}"
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
-  
+      PROMPTTEAMS_API_KEY: "${PROMPTTEAMS_API_KEY}"
+
   slack_processor:
-    image: slack-processor:0.1.1
+    image: knordstrom/slack-processor:0.1.11
+    restart: always
     environment:
-      KAFKA_BROKER: "kafka1:29092"
-      KAFKA_TOPIC: "transcripts"
+      KAFKA_BROKER: "kafka1:19092"
+      KAFKA_TOPIC: "slack"
       PYTHONUNBUFFERED: 1
       GROQ_API_KEY: "${GROQ_API_KEY}"
       VECTOR_DB_HOST: "docker-weaviate-1"
       VECTOR_DB_PORT: 8080
+      PROMPTTEAMS_API_KEY: "${PROMPTTEAMS_API_KEY}"
       
   api:
-    image: context-api:0.1.1
+    restart: always
+    image: knordstrom/sofia-api:0.1.10
     ports:
       - "5010:5010"
       - "3127:3127"
     environment:
-      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_BROKER: "kafka1:19092"
       KAFKA_TOPIC: "emails"
       PYTHONUNBUFFERED: 1
       VECTOR_DB_HOST: "docker-weaviate-1"
@@ -144,3 +161,15 @@ services:
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
       GROQ_API_KEY: "${GROQ_API_KEY}"
       GSUITE_CREDS_FILE: "${GSUITE_CREDS_FILE}"
+      PROMPTTEAMS_API_KEY: "${PROMPTTEAMS_API_KEY}"
+
+  nginx:
+    restart: always
+    image: nginx:1-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx:/var/log/nginx
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
