Auth fixed and some neww response possibilities on API:

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.4'
 services:
   weaviate:
+    # platform: linux/x86_64
+    # container_name: weaviate-test
     command:
       - --host
       - 0.0.0.0
@@ -35,6 +37,7 @@ services:
     #   - /var/lib/neo4j/data:/data
     environment:
       - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_AUTH=${NEO4J_USERNAME}/${NEO4J_PASSWORD}
       - NEO4J_apoc_export_file_enabled=true 
       - NEO4J_apoc_import_file_enabled=true 
       - NEO4J_apoc_import_file_use__neo4j__config=true 
