--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,12 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
+    types: 
+      - opened 
+      - reopened
     branches: [ "main" ]
+    paths:
+      - '**.py'
 
 permissions:
   contents: read
