--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -48,7 +48,8 @@ jobs:
         poetry install
     - name: Start docker
       run: |
-        ./docker/docker compose up -d
+        cd docker
+        docker compose up -d
     - name: Show running containers
       run: |
         docker ps -a
