--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -46,9 +46,13 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install
+    - name: Login to docker
+      run: |
+        echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
     - name: Create containers
       run: |
         make docker-processor
+        make docker-api
     - name: Establish env file
       env:
         QA_ENV_FILE: ${{ secrets.QA_ENV_FILE }}
