--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -66,6 +66,7 @@ jobs:
         df -h
         cd /opt
         find . -maxdepth 1 -mindepth 1 '!' -path ./containerd '!' -path ./actionarchivecache '!' -path ./runner '!' -path ./runner-cache -exec rm -rf '{}' ';'
+        docker system prune --all --force
         df -h
     - name: Run containers
       run: |
