--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -75,10 +75,13 @@ jobs:
         echo "Listing 100 largest packages"
         dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n | tail -n 100
         echo "Removing large packages"
-        sudo apt-get remove -y '^ghc-8.*'
+        sudo apt-get remove -y '^azure-cli.*'
+        sudo apt-get remove -y '^microsoft-edge-stable.*'
+        sudo apt-get remove -y '^google-chrome-stable.*'
+        sudo apt-get remove -y '^firefox.*'
         sudo apt-get remove -y '^dotnet-.*'
         sudo apt-get remove -y '^llvm-.*'
-        sudo apt-get remove -y 'php.*'
+        sudo apt-get remove -y '^temurin.*'
         sudo apt-get remove -y azure-cli google-cloud-sdk hhvm google-chrome-stable firefox powershell mono-devel
         sudo apt-get autoremove -y
         sudo apt-get clean
