Just trying to clean up some disk space and not get errors on packages that are not installed

--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -82,7 +82,9 @@ jobs:
         sudo apt-get remove -y '^dotnet-.*'
         sudo apt-get remove -y '^llvm-.*'
         sudo apt-get remove -y '^temurin.*'
-        sudo apt-get remove -y azure-cli google-cloud-sdk hhvm google-chrome-stable firefox powershell mono-devel
+        sudo apt-get remove -y '^powershell.*'
+        sudo apt-get remove -y '^mono-devel.*'
+        sudo apt-get remove -y '^mysql-server.*'
         sudo apt-get autoremove -y
         sudo apt-get clean
         echo "Removing large directories"
