--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -115,17 +115,17 @@ jobs:
     - name: Include app credentials
       run: |
         echo ${{ secrets.GSUITE_APP_CREDS }} > resources/gsuite_creds.json
-    - name: Create containers
-      run: |
-        make docker-processor
-        make docker-api
-    - name: Report space post creation
-      run: |
-        df -h
-    - name: Run containers
-      run: |
-        cd docker
-        docker compose up -d
+    # - name: Create containers
+    #   run: |
+    #     make docker-processor
+    #     make docker-api
+    # - name: Report space post creation
+    #   run: |
+    #     df -h
+    # - name: Run containers
+    #   run: |
+    #     cd docker
+    #     docker compose up -d
     - name: Show running containers
       run: |
         docker ps -a
