--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     image: neo4j:5.22.0
     ports:
     - 7687:7687
-    - 7575:7575
+    - 7574:7574
     restart: on-failure:0
     # volumes:
     #   - /var/lib/neo4j/data:/data
@@ -41,8 +41,8 @@ services:
       - NEO4J_apoc_export_file_enabled=true 
       - NEO4J_apoc_import_file_enabled=true 
       - NEO4J_apoc_import_file_use__neo4j__config=true 
-      - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7575
-      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:7687
+      # - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7575
+      # - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:7687
       - NEO4J_AUTH=neo4j/password
 
   # zoo1:
