--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -71,40 +71,40 @@ jobs:
         echo "---------"
         find . -maxdepth 1 -mindepth 1 '!' -path ./Python
         
-    - name: Clear space
-      run: |
-        echo "Poetry is (before cleanse)"
-        which poetry
-        cd /opt
-        find . -maxdepth 1 -mindepth 1 '!' -path ./containerd '!' -path ./actionarchivecache '!' -path ./runner-cache '!' -path ./pipx_bin '!' -path ./pipx '!' -path ./hostedtoolcache -exec rm -rf '{}' ';'        
-        cd hostedtoolcache
-        find . -maxdepth 1 -mindepth 1 '!' -path ./Python -exec rm -rf '{}' ';'
-        docker system prune --all --force
-        echo "=============================================================================="
-        echo "Freeing up disk space on CI system per script"
-        echo "=============================================================================="
-        echo "Poetry is"
-        which poetry
-        echo "Listing 100 largest packages"
-        dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n | tail -n 100
-        echo "Removing large packages"
-        sudo apt-get remove -y '^azure-cli.*'
-        sudo apt-get remove -y '^microsoft-edge-stable.*'
-        sudo apt-get remove -y '^google-chrome-stable.*'
-        sudo apt-get remove -y '^firefox.*'
-        sudo apt-get remove -y '^dotnet-.*'
-        sudo apt-get remove -y '^llvm-.*'
-        sudo apt-get remove -y '^temurin.*'
-        sudo apt-get remove -y '^powershell.*'
-        sudo apt-get remove -y '^mono-devel.*'
-        sudo apt-get remove -y '^mysql-server.*'
-        sudo apt-get autoremove -y
-        sudo apt-get clean
-        echo "Removing large directories"
-        # deleting 15GB
-        rm -rf /usr/share/dotnet/
-        echo "Poetry should still be here ..."
-        which poetry
+    # - name: Clear space
+    #   run: |
+    #     echo "Poetry is (before cleanse)"
+    #     which poetry
+    #     cd /opt
+    #     find . -maxdepth 1 -mindepth 1 '!' -path ./containerd '!' -path ./actionarchivecache '!' -path ./runner-cache '!' -path ./pipx_bin '!' -path ./pipx '!' -path ./hostedtoolcache -exec rm -rf '{}' ';'        
+    #     cd hostedtoolcache
+    #     find . -maxdepth 1 -mindepth 1 '!' -path ./Python -exec rm -rf '{}' ';'
+    #     docker system prune --all --force
+    #     echo "=============================================================================="
+    #     echo "Freeing up disk space on CI system per script"
+    #     echo "=============================================================================="
+    #     echo "Poetry is"
+    #     which poetry
+    #     echo "Listing 100 largest packages"
+    #     dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n | tail -n 100
+    #     echo "Removing large packages"
+    #     sudo apt-get remove -y '^azure-cli.*'
+    #     sudo apt-get remove -y '^microsoft-edge-stable.*'
+    #     sudo apt-get remove -y '^google-chrome-stable.*'
+    #     sudo apt-get remove -y '^firefox.*'
+    #     sudo apt-get remove -y '^dotnet-.*'
+    #     sudo apt-get remove -y '^llvm-.*'
+    #     sudo apt-get remove -y '^temurin.*'
+    #     sudo apt-get remove -y '^powershell.*'
+    #     sudo apt-get remove -y '^mono-devel.*'
+    #     sudo apt-get remove -y '^mysql-server.*'
+    #     sudo apt-get autoremove -y
+    #     sudo apt-get clean
+    #     echo "Removing large directories"
+    #     # deleting 15GB
+    #     rm -rf /usr/share/dotnet/
+    #     echo "Poetry should still be here ..."
+    #     which poetry
 
     - name: Report space post prune
       run: |
