--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.4'
 services:
   weaviate:
     # platform: linux/x86_64
@@ -7,12 +6,12 @@ services:
       - --host
       - 0.0.0.0
       - --port
-      - '8081'
+      - ${VECTOR_DB_PORT}
       - --scheme
       - http
     image: cr.weaviate.io/semitechnologies/weaviate:1.24.4
     ports:
-    - 8081:8081
+    - ${VECTOR_DB_PORT}:${VECTOR_DB_PORT}
     - 50051:50051
     restart: on-failure:0
     environment:
@@ -30,7 +29,7 @@ services:
   neo4j:
     image: neo4j:5.22.0
     ports:
-    - 7688:7688
+    - ${NEO4J_DB_PORT}:${NEO4J_DB_PORT}
     - 7575:7575
     restart: on-failure:0
     # volumes:
@@ -42,7 +41,7 @@ services:
       - NEO4J_apoc_import_file_enabled=true 
       - NEO4J_apoc_import_file_use__neo4j__config=true 
       - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7575
-      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:7688
+      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:${NEO4J_DB_PORT}
       - NEO4J_AUTH=neo4j/password
 
   # zoo1:
