--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     platform: linux/x86_64
     image: neo4j:5.22.0
     ports:
-    - ${NEO4J_DB_PORT}:${NEO4J_DB_PORT}
+    - ${NEO4J_BOLT_PORT}:${NEO4J_BOLT_PORT}
     - 7575:7575
     restart: on-failure:0
     environment:
@@ -50,8 +50,8 @@ services:
       - NEO4J_apoc_export_file_enabled=true 
       - NEO4J_apoc_import_file_enabled=true 
       - NEO4J_apoc_import_file_use__neo4j__config=true 
-      - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7575
-      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:${NEO4J_DB_PORT}
+      - NEO4J_server_http_listen__address=0.0.0.0:7575
+      - NEO4J_server_bolt_listen__address=0.0.0.0:${NEO4J_BOLT_PORT}
       - NEO4J_AUTH=neo4j/password
     networks:
       - backend
@@ -71,7 +71,8 @@ services:
       NEO4J_URI: "neo4j:7688"
       NEO4J_USERNAME: "${NEO4J_USERNAME}"
       NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
-      NEO4J_DB_HOST: "${NEO4J_DB_HOST}"
+      NEO4J_DB_HOST: "neo4j-test"
+      NEO4J_DB_PORT: ${NEO4J_BOLT_PORT}
       GROQ_API_KEY: "${GROQ_API_KEY}"
     depends_on:
       - weaviate
