--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ slack_processor = "processor.slack:start"
 transcripts_processor = "processor.transcripts:start"
 
 [tool.poetry.dependencies]
-python = "3.11.6"
+python = ">=3.11.6, <= 3.11.10"
 pytest = "^8.1.1"
 google-api-python-client = "^2.122.0"
 google-auth-httplib2 = "^0.2.0"
